Add C implementation and system service

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,3 @@
-cmake_minimum_required(VERSION 3.16)
-project(SentinelRootQt)
-find_package(Qt5 COMPONENTS Widgets REQUIRED)
-add_executable(sentinelrootqt main.cpp)
-target_link_libraries(sentinelrootqt Qt5::Widgets)
+cmake_minimum_required(VERSION 3.10)
+project(SentinelRoot C)
+add_executable(sentinelroot sentinel.c)
