--- a/sentinelboot.service
+++ b/sentinelboot.service
@@ -4,6 +4,9 @@ After=local-fs.target
 
 [Service]
 Type=oneshot
+# Explicitly run as root since boot partition backups require
+# administrative permissions
+User=root
 # Explicitly run the Python implementation to avoid
 # any stale compiled binaries.
 ExecStart=/usr/bin/python3 -m sentinelroot.boot_protect
